# future_ws

./: .gitignore  README.md  mavros_with_fastlio.sh  px4ctrl.sh
src/FAST_LIO/src/config/: avia.yaml  mid360.yaml
src/FAST_LIO/src/launch/: mapping_mid360.launch  mavros.launch  mavros_with_fastlio_px4.launch  mavros_with_fastlio_px4ctrl.launch
src/FAST_LIO/src/scripts/: livox_ros_pointcloud.py  livox_ros_pointcloud_filtered.py  mavros_with_fastlio_px4.sh  mavros_with_fastlio_px4ctrl.sh  odometry_to_pose_stamped.py
src/FAST_LIO/src/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/SUPER/mission_planner/data/: benchmark.txt
src/SUPER/mission_planner/launch/: click_demo.launch  click_mission.launch
src/SUPER/super_planner/config/: click_smooth_ros1.yaml  real_drone_params.yaml  static_dense.yaml
src/SUPER/super_planner/launch/: real_flight.launch
src/SUPER/super_planner/scripts/: auto_mission.py  auto_test.py
src/search_mission/: CMakeLists.txt  package.xml
src/search_mission/config/: mission_config.yaml
src/search_mission/include/search_mission/: mission_fsm.hpp
src/search_mission/launch/: aruco_det.launch  start_mission.launch
src/search_mission/src/: mission_fsm.cpp
src/vins_pose/src/launch/: vins_to_mavros.launch
src/vins_pose/src/vins_to_mavros/: CMakeLists.txt  package.xml
src/vins_pose/src/vins_to_mavros/launch/: lio_to_mavros.launch  vins_to_mavros.launch
src/vins_pose/src/vins_to_mavros/src/: lio_to_mavros.cpp  vins_to_mavros.cpp
